monitoring/thanos-np/prometheus.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-thanos
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: grafana
      k8s:app.kubernetes.io/instance: prometheus
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: query
        k8s:app.kubernetes.io/instance: thanos-query
        k8s:app.kubernetes.io/name: thanos
    toPorts:
    - ports:
      - port: "10902"
        protocol: TCP
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toServices:
    - k8sServiceSelector:
        selector:
          matchLabels:
            component: apiserver
            provider: kubernetes
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
